--- a/random_generator_from_scratch.ipynb
+++ b/random_generator_from_scratch.ipynb
@@ -18,10 +18,11 @@
     "<p>Subtract 52 = 1773</p>\n",
     "<p>This simple example follows a pattern, but the algorithms behind computer number generation are much more complicated (based on distributions like the Bernoulli distribution or Poisson distribution), mimicking randomness much better than I can do here. But the process still follows a pattern, which will be repeated the next time you enter 77 or 99, or whatever number you choose into the “random seed” box. (Taghizadeh, 2019)</p>\n",
     "</blockquote>\n",
+    "<p>Therefore, random generators are not really random, hence pseudo, unlike quantum random generators. Essentially, the seed goes through an algorithm that manipulates it, making the result appear truly random. The interesting thing is that random generators for most computer languages have a seed set by the computer's clock in seconds. This is where the heart of pseudo randomness is before it undergoes manipulation from the constants <em>a</em> and <em>m</em> within the algorithm's formula.</p>\n",
     "<p>*************************************<p>\n",
     "<p>Furthermore, Sheldon Ross, author of <em>Simulation</em> 4th edition, states, on page 42, that \"We want to choose the constants <em>a</em> and <em>m</em> so that, for any initial seed x<sub>0</sub>, the number of variables that can be generated before this repetition occurs is [too] large.... [The constant] m should be chosen to be a large prime number that can be fitted to the computer word size. For a 32-bit word machine (where the first bit is a sign bit), it has been shown that the choices of <em>m</em> = 2<sup>31</sup>-1 and <em>a</em> = 7<sup>5</sup> = 16,807 result in desirable properties.\"</p>\n",
     "<p>Therefore, in our case, <em>m</em> will equal mod (i.e., modulo), and <em>a</em> will equal mult (i.e., multiplier/coefficient).</p>\n",
-    "<br>\n",
+    "<p>*************************************<p>\n",
     "<p><center>References</center></p>\n",
     "<p>Ross, S. M. (2006). <em>Simulation</em>. Amsterdam: Elsevier Academic Press.</p>\n",
     "<p>Taghizadeh, Elham. (2019). Re: Can someone explain what is seed in generating a random number?. Retrieved from: https://www.researchgate.net/post/Can-someone-explain-what-is-seed-in-generating-a-random-number/5d7d10bdf0fb62656d37ded3/citation/download. </p>"
